--- a/app/src/main/res/layout/content_form_user.xml
+++ b/app/src/main/res/layout/content_form_user.xml
@@ -17,9 +17,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:focusableInTouchMode="true"
             android:orientation="vertical"
-            android:padding="@dimen/xmin_padding"
-            android:focusableInTouchMode="true">
+            android:padding="@dimen/xmin_padding">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -33,8 +33,7 @@
                     android:layout_width="@dimen/thumb_height"
                     android:layout_height="@dimen/thumb_height"
                     android:layout_weight="1"
-                    android:src="@drawable/user_ava_man"
-                    />
+                    android:src="@drawable/user_ava_man" />
 
                 <Button
                     android:id="@+id/btnUploadFoto"
@@ -66,8 +65,8 @@
                     android:background="@color/colorNearWhite"
                     android:ems="10"
                     android:hint="Nama"
-                    android:inputType="text"
                     android:imeOptions="actionNext"
+                    android:inputType="textPersonName|textCapWords"
                     android:padding="@dimen/min_padding" />
             </LinearLayout>
 
@@ -116,16 +115,32 @@
                     android:text="Nomor Telepon"
                     android:textColor="@color/colorBlack" />
 
-                <EditText
-                    android:id="@+id/fus_phone"
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/colorNearWhite"
-                    android:ems="10"
-                    android:hint="Nomor Telepon"
-                    android:imeOptions="actionNext"
-                    android:inputType="textEmailAddress"
-                    android:padding="@dimen/min_padding" />
+                    android:background="@color/colorNearWhite">
+
+                    <com.hbb20.CountryCodePicker
+                        android:id="@+id/country_code"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_centerVertical="true"
+                        app:ccp_defaultNameCode="ID"
+                        app:ccp_showFlag="false" />
+
+                    <EditText
+                        android:id="@+id/fus_phone"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_toEndOf="@+id/country_code"
+                        android:background="@color/colorNearWhite"
+                        android:ems="10"
+                        android:hint="Nomor Telepon"
+                        android:imeOptions="actionNext"
+                        android:inputType="phone"
+                        android:padding="@dimen/min_padding" />
+
+                </RelativeLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -171,13 +186,12 @@
                     android:id="@+id/fus_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:ems="10"
                     android:background="@color/colorNearWhite"
+                    android:ems="10"
                     android:hint="Kata Sandi"
                     android:imeOptions="actionNext"
                     android:inputType="textPassword"
-                    android:padding="@dimen/min_padding"
-                    />
+                    android:padding="@dimen/min_padding" />
             </LinearLayout>
 
             <LinearLayout
@@ -197,13 +211,12 @@
                     android:id="@+id/fus_repassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:ems="10"
                     android:background="@color/colorNearWhite"
+                    android:ems="10"
                     android:hint="Ulangi Kata Sandi"
                     android:imeOptions="actionNext"
                     android:inputType="textPassword"
-                    android:padding="@dimen/min_padding"
-                    />
+                    android:padding="@dimen/min_padding" />
             </LinearLayout>
         </LinearLayout>
 
