--- a/app/src/main/res/layout/content_dompet.xml
+++ b/app/src/main/res/layout/content_dompet.xml
@@ -82,6 +82,7 @@
             android:layout_margin="@dimen/xmin_padding"
             android:clickable="true"
             android:foreground="?selectableItemBackground"
+            android:visibility="gone"
             app:cardBackgroundColor="@color/colorWhite"
             app:cardElevation="1dp">
 
@@ -216,22 +217,26 @@
 
                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/btn_history_withdrawal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/det_last_withdrawal"
-                    android:layout_marginTop="@dimen/xmin_padding"
-                    android:clickable="true"
-                    android:gravity="end"
-                    android:text="Riwayat Withdrawal>>"
-                    android:textColor="@color/colorPrimary" />
-
 
             </RelativeLayout>
 
 
         </android.support.v7.widget.CardView>
+
+
+        <TextView
+            android:id="@+id/btn_history_withdrawal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/credit_info"
+            android:background="@drawable/radius_primary"
+            android:clickable="true"
+            android:layout_alignParentEnd="true"
+            android:text="Riwayat Withdrawal"
+            android:textStyle="bold"
+            android:layout_margin="@dimen/xmin_padding"
+            android:padding="@dimen/xmin_padding"
+            android:textColor="@color/colorWhite" />
 
         <!--<android.support.v7.widget.CardView-->
         <!--android:id="@+id/tunai_info"-->
